--- a/assets/css/originalSass.scss
+++ b/assets/css/originalSass.scss
@@ -1600,8 +1600,8 @@ footer .center-block {
   }
 }
 }
-@media  screen and (max-width:425px) {
-  #service #service-blocks{
+@media screen and (max-width:425px) {
+  #blueBg #service #service-blocks{
     #service-block1,#service-block2,#service-block3,#service-block4 {
       .appFrame{
         width:24rem;
